fixed centering of headings with text-align

--- a/nasa-app/src/app/components/daily-images-container/scss/_layout.scss
+++ b/nasa-app/src/app/components/daily-images-container/scss/_layout.scss
@@ -1,5 +1,6 @@
 .astro--page__heading--wrapper {
   @include center-child;
+  text-align: center;
 }
 
 .astro--page__heading {
